--- a/scss/_navegacion.scss
+++ b/scss/_navegacion.scss
@@ -10,8 +10,8 @@ header {
 
     width: 100%;
     background: #092546f7;
-    font-family: 'Poppins',
-    sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
     font-size: 1rem;
 
     label {
