--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -54,6 +54,7 @@ footer {
                 p {
                     text-align: center;
                     justify-content: center;
+                    text-align: justify;
                 }
             }
 
